Prevent too wide clickable search results

--- a/resources/stylesheets/pages/_search.scss
+++ b/resources/stylesheets/pages/_search.scss
@@ -152,3 +152,9 @@
     display: block;
   }
 }
+
+.search-results__link {
+  display: block;
+
+  width: max-content;
+}
